@@ -14,6 +14,9 @@ Release 2.6.0 - 2014-11-18
 
   IMPROVEMENTS
 
+    HDFS-9555. LazyPersistFileScrubber should still sleep if there are errors
+    in the clear progress (Phil Yang via kihwal)
+
     HDFS-7213. processIncrementalBlockReport performance degradation.
 
     HDFS-8581. ContentSummary on / skips further counts on yielding lock
